K8S/selenium/base/deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "selenium"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "selenium"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "selenium"
      annotations:
        promtail.io/collect: "true"
    spec:
      serviceAccountName: "selenium"
      automountServiceAccountToken: false
      containers:
        - name: "selenium"
          image: "selenium/standalone-chrome:latest"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: "api"
              protocol: "TCP"
              containerPort: 4444
            - name: "vnc"
              protocol: "TCP"
              containerPort: 7900
          resources:
            requests:
              memory: "630Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
